--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.4
   flutter_svg: ^2.0.9
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
