--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^4.17.4
   flutter_svg: ^2.0.9
   http: ^1.2.0
+  flutter_typeahead: ^5.2.0
+  geocoding: ^2.2.0
 
 dev_dependencies:
   flutter_test:
