--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.2.0
   flutter_typeahead: ^5.2.0
   geocoding: ^2.2.0
+  google_maps_flutter: ^2.5.3
 
 dev_dependencies:
   flutter_test:
