--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_typeahead: ^5.2.0
   geocoding: ^2.2.0
   google_maps_flutter: ^2.5.3
+  csv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
   #To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/resort_names.csv
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
