--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   geocoding: ^2.2.0
   google_maps_flutter: ^2.5.3
   csv: ^6.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
