--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_maps_flutter: ^2.5.3
   csv: ^6.0.0
   intl: ^0.19.0
+  cloud_firestore: ^4.15.10
 
 dev_dependencies:
   flutter_test:
