--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   csv: ^6.0.0
   intl: ^0.19.0
   cloud_firestore: ^4.15.10
+  mockito: ^5.4.4
 
 dev_dependencies:
   flutter_test:
